; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_prepare_list_intersection.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_prepare_list_intersection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@id_ints = common dso_local global i32 0, align 4
@object_id_ints = common dso_local global i32 0, align 4
@list_intersect_x = common dso_local global i32 0, align 4
@report_x = common dso_local global i32 0, align 4
@list_intersect_x_prefix = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prepare_list_intersection(i32 %0, i32 %1, i32* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* @id_ints, align 4
  %15 = load i32, i32* @id_ints, align 4
  %16 = load i32, i32* @object_id_ints, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %26

18:                                               ; preds = %6
  %19 = load i32, i32* @list_intersect_x, align 4
  store i32 %19, i32* @report_x, align 4
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32*, i32** %10, align 8
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %12, align 4
  %25 = call i32 @__prepare_list_intersection(i32 %20, i32 %21, i32* %22, i32 %23, i32 0, i32 %24)
  store i32 %25, i32* %7, align 4
  br label %34

26:                                               ; preds = %6
  %27 = load i32, i32* @list_intersect_x_prefix, align 4
  store i32 %27, i32* @report_x, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @__prepare_list_intersection_intervals(i32 %28, i32 %29, i32* %30, i32 %31, i32 0, i32 %32)
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %26, %18
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i32 @__prepare_list_intersection(i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @__prepare_list_intersection_intervals(i32, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
